--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/app.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
