--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB=
-DB_PORT=
+DB_USER="leara"
+DB_PASSWORD="Rumisir505"
+DB_HOST="db"
+DB="products_management"
+DB_PORT="5432"
