--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/app.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/app.js",
+    "dev": "nodemon ./src/app.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
@@ -13,8 +13,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jest": "^28.0.2",
-    "nodemon": "^2.0.15",
-    "sucrase": "^3.21.0",
+    "pg": "^8.7.3",
     "supertest": "^6.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19",
+    "sucrase": "^3.25.0"
   }
 }
